--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,10 +1,10 @@
 #### General
 profile=gpu-hq
-#gpu-api=opengl  # Uncomment this if you notice stuttering with vulkan
-gpu-api=vulkan  # Comment this if you notice stuttering and uncomment the above line
-#vulkan-async-compute=yes
-#vulkan-async-transfer=yes
-#vulkan-queue-count=1
+#gpu-api=vulkan  # Uncomment this if you notice stuttering with vulkan
+gpu-api=opengl  # Comment this if you notice stuttering and uncomment the above line
+vulkan-async-compute=yes
+vulkan-async-transfer=yes
+vulkan-queue-count=1
 vd-lavc-dr=yes
 spirv-compiler=auto
 cursor-autohide=100
@@ -38,7 +38,7 @@ alang=ja,jp,jpn,en,eng
 # Also includes all the filtering-related flags
 vo=gpu
 audio-display=embedded-first
-
+#hwdec=auto-safe
 # Streaming
 hls-bitrate=max
 ytdl-format=bestvideo[height<=?1440]+bestaudio/bestvideo+bestaudio/best
@@ -56,7 +56,7 @@ glsl-shader="~~/shaders/SSimDownscaler.glsl"        # Luma downscale
 # Additional resizer options
 scale=ewa_lanczos
 # alternative dscale: mitchell
-#dscale=ewa_lanczos
+dscale=ewa_lanczos
 cscale=sinc
 cscale-window=blackman
 cscale-radius=3
@@ -273,7 +273,7 @@ tscale-clamp=0.0
 dither-depth=auto
 #downscale in case the display is not 3840x2160
 #glsl-shader="~~/shaders/SSimDownscaler.glsl" uncomment in case if you want to use shader for luma downscaling and comment the line below
-#dscale=mitchell
+dscale=mitchell
 
 
 [simulcast-autoprofile]
@@ -327,10 +327,11 @@ profile=ww-ext-image
 
 # #Profile to load Anime4K shaders
 [Anime4K]
-glsl-shaders-append="~~/shaders/Anime4K_Clamp_Highlights.glsl"
-glsl-shaders-append="~~/shaders/Anime4K_Restore_CNN_M.glsl"
-glsl-shaders-append="~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"
-glsl-shaders-append="~~/shaders/Anime4K_Restore_CNN_S.glsl"
-glsl-shaders-append="~~/shaders/Anime4K_AutoDownscalePre_x2.glsl"
-glsl-shaders-append="~~/shaders/Anime4K_AutoDownscalePre_x4.glsl"
-glsl-shaders-append="~~/shaders/Anime4K_Upscale_CNN_x2_S.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_Clamp_Highlights.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_Restore_CNN_M.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_Restore_CNN_S.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_AutoDownscalePre_x2.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_AutoDownscalePre_x4.glsl"
+#glsl-shaders-append="~~/shaders/Anime4K_Upscale_CNN_x2_S.glsl"
+
