Added git aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,15 @@
 [core]
 	excludesfile = /Users/guirdias/.gitignore_global
+	autocrlf = input
+	safecrlf = warn
 [user]
 	name = Guilherme Dias
-	mail = guirdias@protonmail.com
+  mail = guirdias@protonmail.com
+[alias]
+  co = checkout
+  ci = commit
+  st = status
+  br = branch
+  hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+  type = cat-file -t
+  dump = cat-file -p
