--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -45,7 +45,7 @@
 #PGDWN add chapter -1                   # skip to previous chapter
 #Shift+PGUP seek 600
 #Shift+PGDWN seek -600
-#[ multiply speed 1/1.1                 # scale playback speed
+#[ multiply speed 1/1.1                 # scale playKEY script-binding boss-keyback speed
 #] multiply speed 1.1
 #{ multiply speed 0.5
 #} multiply speed 2.0
@@ -213,3 +213,7 @@ CTRL+5 no-osd change-list glsl-shaders set "~~/shaders/Anime4K_Clamp_Highlights.
 CTRL+6 no-osd change-list glsl-shaders set "~~/shaders/Anime4K_Clamp_Highlights.glsl:~~/shaders/Anime4K_Upscale_Denoise_CNN_x2_VL.glsl:~~/shaders/Anime4K_AutoDownscalePre_x2.glsl:~~/shaders/Anime4K_AutoDownscalePre_x4.glsl:~~/shaders/Anime4K_Restore_CNN_M.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"; show-text "Anime4K: Mode C+A (HQ)"
 
 CTRL+0 no-osd change-list glsl-shaders clr ""; show-text "GLSL shaders cleared"
+
+# 
+
+c script-binding crop-screenshot
