--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
 [user]
 	name = Obstinus
   mail = guirdias@protonmail.com
+	email = guirdias@protonmail.com
 [alias]
   co = checkout
   ci = commit
