--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 ############# FONTS ##############
 ##################################
 
-font_family      		Inconsolata
+font_family      		FiraCode Nerd Font
 italic_font      		auto
 bold_font        		auto
 bold_italic_font 		auto
