--- a/.config/mpv/script-opts/mpv_crop_script.conf
+++ b/.config/mpv/script-opts/mpv_crop_script.conf
@@ -1,1 +1,5 @@
 output_template=/Users/guirdias/mpv_screenshots/${filename} ${#pos:%02h.%02m.%06.3s} ${!full:${crop_w}x${crop_h} ${%unique:%03d}}.png
+
+# You can disable the automatic keybind to 'c' and add your own, see below
+
+disable_keybind=yes
