--- a/.mostrc
+++ b/.mostrc
@@ -1,6 +1,6 @@
 % Color settings
 
-color normal lightgray black
-color status black yellow
+color normal brightblue black
+color status brightwhite black
 color underline brightgreen black
-color overstrike brightblue black
+color overstrike brightmagenta black
