--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,17 +2,17 @@
 ############# FONTS ##############
 ##################################
 
-font_family      		FiraCode Nerd Font
+font_family      		Inconsolata Nerd Font
 italic_font      		auto
 bold_font        		auto
 bold_italic_font 		auto
 
-font_size        		12.0
+font_size        		13.0
 
 foreground_opacity		1.0
-background_opacity		0.9
+background_opacity		0.7
 foreground       		#FFFFFF
-background 	 		    #0b0b0f
+background 	 		#0b0b0f
 
 selection_foreground 		#000000
 selection_background		#dddddd
@@ -23,8 +23,8 @@ adjust_line_height  		110%
 ############# CURSOR #############
 ##################################
 
-cursor				      #FFFFFF
-cursor_shape			  beam
+cursor				#FFFFFF
+cursor_shape			beam
 shell_integration		no-cursor
 select_by_word_characters :	@-./_~?&=%+#
 repaint_delay   		10
@@ -86,19 +86,18 @@ color15  #d8d8d8
 ##################################
 
 map ctrl+v	 	        paste_from_clipboard
-map ctrl+v	    	    paste_from_selection
-map ctrl+c	   	      copy_to_clipboard
-map ctrl+c			      copy_to_selection
+map ctrl+v	    	        paste_from_selection
+map ctrl+c	   	        copy_to_clipboard
+map ctrl+c			copy_to_selection
 
 map ctrl+l			clear_log_notice
 
 map shift+up        		scroll_line_up
-map shift+down    	    scroll_line_down
-map shift+page_up  		  scroll_page_up
+map shift+down    	        scroll_line_down
+map shift+page_up  		scroll_page_up
 map shift+page_down 		scroll_page_down
-map ctrl+shift+home     scroll_home
-map ctrl+shift+end      scroll_end
+map ctrl+shift+home      	scroll_home
+map ctrl+shift+end       	scroll_end
 
 map ctrl+equal	         	increase_font_size
 map ctrl+minus	         	decrease_font_size
-
